--- a/AngularShop/src/app/cart/cart.component.html
+++ b/AngularShop/src/app/cart/cart.component.html
@@ -14,7 +14,7 @@
         <div class="card-body">
           <div class="row align-items-center">
             <div class="col-md-3 d-flex justify-content-center align-items-center"  [routerLink]="['/product/'+item.product.productId]">
-              <img src="https://achau.ch/api/images/products/thumbnails/tn_{{item.product.productId}}.jpg"
+              <img src="{{fileServer}}/images/products_tn/tn_{{item.product.productId}}.jpg"
                 onerror="this.src='assets/NotFound.png'"
                 alt="Product Image" class="img-fluid">
             </div>
