--- a/AngularShop/src/app/product-page/product-page.component.html
+++ b/AngularShop/src/app/product-page/product-page.component.html
@@ -6,8 +6,8 @@
 <div #container class="container my-5">
     <div class="row">
         <div class="col-lg-6">
-            <img src="https://achau.ch/api/images/products/{{productId}}.jpg" class="img-fluid" alt="Product Image"
-                onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/330px-No-Image-Placeholder.svg.png'">
+            <img src="{{fileServer}}/images/products/{{product?.productId}}.jpg" class="img-fluid" alt="Product Image"
+            onerror="this.onerror=null; this.src='assets/NotFound.png'">
         </div>
         <div class="col-lg-6">
             <h2 class="mb-4">{{ "PRODUCT DETAILS" | translate}}</h2>
