--- a/AngularShop/src/app/footer/footer.component.html
+++ b/AngularShop/src/app/footer/footer.component.html
@@ -53,7 +53,7 @@
                     <li>
                         <ul class="list-unstyled mb-0 text-light">
                             <li>{{"MONDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:00</li>
-                            <li>{{"SATURDAY"| translate}}: 9:00 - 14:00</li>
+                            <li>{{"SATURDAY"| translate}}: 9:00 - 16:00</li>
                             <li>{{"SUNDAY"| translate}}: {{"CLOSED"| translate}}</li>
                         </ul>
                     </li>
@@ -64,9 +64,9 @@
                 <ul class="list-unstyled mb-0">
                     <li>
                         <ul class="list-unstyled mb-0 text-light">
-                            <li>{{"MONDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:00</li>
-                            <li>{{"SATURDAY"| translate}}: 9:00 - 14:00</li>
-                            <li>{{"SUNDAY"| translate}}: {{"CLOSED"| translate}}</li>
+                            <li>{{"THURSDAY"| translate}} - {{"FRIDAY"| translate}}: 11:00 - 17:30</li>
+                            <li>{{"SATURDAY"| translate}}: 11:00 - 15:30</li>
+                            <li>{{"SUNDAY"| translate}} - {{"WEDNESDAY"| translate}} : {{"CLOSED"| translate}}</li>
                         </ul>
                     </li>
                 </ul>
