--- a/AngularShop/src/app/home/home.component.html
+++ b/AngularShop/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                     <div class="col-md-6 d-flex align-items-center">
                         <div class="text-center">
                             <h2>{{"SHOP DESCRIPTION0" | translate}}</h2>
-                            <p class="lead">{{"SHOP DESCRIPTION1" | translate}}</p>
+                            <p class="lead" [innerHTML]="'SHOP DESCRIPTION1' | translate"></p>
                             <a href="/shop" class="btn btn-secondary btn-lg">{{"DISCOVER MORE" | translate}}</a>
                             <br>
                             <br>
