--- a/AngularShop/src/app/checkout/checkout.component.html
+++ b/AngularShop/src/app/checkout/checkout.component.html
@@ -135,17 +135,15 @@
             <div>*{{"ONLY INVOICING MESSAGE" | translate}}</div>
 
         </div>
-        <div class="col-md-4">
+       <!-- <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{"CART TOTALS" | translate}}</h5>
-                    <!--<p>{{"SUBTOTAL" | translate}}: $XX.XX</p>
-                    <p>{{"TAX" | translate}}: $X.XX</p>-->
                     <p>{{"TOTAL" | translate}}: {{formatPrice(getTotal())}}*</p>
                     <p>*{{"PRICE VARIATION MESSAGE" | translate}} {{"MINIMUM ORDER MESSAGE" | translate}}</p>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
     <br>
     <br>
