--- a/AngularShop/src/app/footer/footer.component.html
+++ b/AngularShop/src/app/footer/footer.component.html
@@ -52,7 +52,8 @@
                 <ul class="list-unstyled mb-0">
                     <li>
                         <ul class="list-unstyled mb-0 text-light">
-                            <li>{{"MONDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:00</li>
+                            <li>{{"MONDAY"| translate}}: 13:30 - 18:30</li>
+                            <li>{{"TUESDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:30</li>
                             <li>{{"SATURDAY"| translate}}: 9:00 - 16:00</li>
                             <li>{{"SUNDAY"| translate}}: {{"CLOSED"| translate}}</li>
                         </ul>
