--- a/AngularShop/src/app/home/home.component.html
+++ b/AngularShop/src/app/home/home.component.html
@@ -1,3 +1,9 @@
+
+<!-- home.component.html -->
+<div *ngIf="content" [innerHTML]="content"></div>
+
+
+<!--
 <div class="container">
     <br>
     <div class="row">
@@ -55,3 +61,5 @@
     </div>
 
 </div>
+
+-->
