--- a/AngularShop/src/app/navbar/navbar.component.html
+++ b/AngularShop/src/app/navbar/navbar.component.html
@@ -8,7 +8,9 @@
         <div class="collapse navbar-collapse" id="nav" [ngbCollapse]="isCollapsed">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" [routerLinkActive]="['active']" routerLink="/home"><i class="bi bi-house"></i>
+                    <!-- <a class="nav-link" [routerLinkActive]="['active']" routerLink="/home"><i class="bi bi-house"></i>
+                        {{'HOME' | translate}}</a>-->
+                    <a class="nav-link" ><i class="bi bi-house"></i> <!--removed [href]="['https://achau.ch']"-->
                         {{'HOME' | translate}}</a>
                 </li>
                 <!--<li class="nav-item">
@@ -54,7 +56,8 @@ l4 205 36 105 c20 58 99 238 176 400 192 403 262 584 326 835 85 336 100 603
                         {{"RESTAURANT" | translate}}</a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/shop']" [queryParams]="{ sort: 'lastModified,desc' }"><i class="bi bi-shop"></i>
+                    <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/shop']"
+                        [queryParams]="{ sort: 'lastModified,desc' }"><i class="bi bi-shop"></i>
                         {{'SHOP' |
                         translate}}</a>
                 </li>
@@ -87,7 +90,8 @@ l4 205 36 105 c20 58 99 238 176 400 192 403 262 584 326 835 85 336 100 603
                 <li class="nav-item">
                     <div class="form-check form-switch">
                         <a class="nav-link"> {{"DARK MODE" | translate}}
-                        <input #themeToggle class="form-check-input" type="checkbox" role="switch" (change)="onSwitchTheme()" [checked]="getTheme()==='dark'">
+                            <input #themeToggle class="form-check-input" type="checkbox" role="switch"
+                                (change)="onSwitchTheme()" [checked]="getTheme() === 'dark'">
                         </a>
                     </div>
                 </li>
