--- a/AngularShop/src/app/profile/main-profile/main-profile.component.html
+++ b/AngularShop/src/app/profile/main-profile/main-profile.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Menu Sidebar -->
-            <div class="col-md-3 col-lg-2 d-md-block sidebar collapse">
+            <div class="col-sm-3 col-md-3 col-lg-2 d-block sidebar collapse">
                 <div class="list-group">
                     <a class="list-group-item list-group-item-action" routerLink="/profile/history" routerLinkActive="active">{{'ORDER HISTORY' | translate}}</a>
                     <a class="list-group-item list-group-item-action" routerLink="/profile/edit" routerLinkActive="active">{{'PROFILE EDIT' | translate}}</a>
