--- a/AngularShop/src/app/shop/shop.component.html
+++ b/AngularShop/src/app/shop/shop.component.html
@@ -5,7 +5,7 @@
 <!--Popup section ends-->
 
 <!-- shop-page.component.html -->
-<div class="container">
+<div #container class="container">
     <div class="row">
         <div class="col-lg-3">
 
@@ -29,17 +29,16 @@
                         </h6>
                         <div id="{{'subcategoryList' + i}}" class="overflow-auto collapse"
                             style="height: 100px;">
-                            <a *ngFor="let group of productCategory.subCategory | keyvalue"
+                            <a *ngFor="let group of productCategory.subCategory.sort()"
                                 style="color:#11698e;text-decoration: none; cursor:pointer;"
-                                (click)="scroll(productList);" [routerLink]="'/shop'" [queryParams]="{'category': productCategory.category,'subcategory': group.value }">{{group.value}}
+                                (click)="scroll(productList);" [routerLink]="'/shop'" [queryParams]="{'category': productCategory.category,'subcategory': group }">{{group}}
                                 <br></a> <br>
                         </div>
                     </div>
 
                 </div>
             </div>
-
-
+          <br>
         </div>
         <div class="col-lg-9">
             <!-- Search bar -->
